[package]
name = "ip_geolocation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
clap = "3.2.13"
colored = "2.0.0"
serde = { version = "1.0.147", features = ["derive"]}